--- a/src/styles/layout/_piggame.scss
+++ b/src/styles/layout/_piggame.scss
@@ -3,10 +3,117 @@
 	height: 100vh;
 	width: 100%;
 	background-image: url("images/background.jpg");
-	padding: 0 7rem;
+	padding: 0 5rem;
 
-	&__container{
-		background: red;
+	&__container {
 		width: 100%;
+	}
+
+	&__header {
+		position: relative;
+		display: flex;
+		height: 15rem;
+		align-items: flex-start;
+		padding: 2rem 0 0 0;
+	}
+
+	&__btns {
+		display: flex;
+		border-radius: 7px;
+		overflow: hidden;
+
+		&--rolldice {
+			background: $primary-green;
+			border: none;
+			height: 8rem;
+			padding: 0 8rem;
+			cursor: pointer;
+			transition: all .7s;
+
+			&:hover {
+				background: darken($primary-green, 4%);
+			}
+
+			@include boxshadow(2);
+		}
+
+		&--hold {
+			background: $primary-blue;
+			border: none;
+			padding: 0rem 2rem;
+			cursor: pointer;
+			transition: all .7s;
+
+			&:hover {
+				background: darken($primary-blue, 4%);
+			}
+		}
+	}
+
+	&__info {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		height: 8rem;
+
+		&--limit {
+			display: flex;
+			height: 100%;
+			margin: 0 0 0 5rem;
+		}
+		&--firstnumber,
+		&--secondnumber {
+			display: flex;
+			justify-content: flex-end;
+			width: 5.3rem;
+			height: 100%;
+			background: $primary-black;
+			border-radius: 7px;
+			color: white;
+			margin: 0 1.2rem 0 0;
+			padding: 1px 8px 0 0;
+			@include boxshadow(3);
+		}
+	}
+
+	&__body {
+		display: flex;
+		justify-content: space-between;
+		border-top: 1px solid $border-color;
+		border-bottom: 1px solid $border-color;
+		height: 75%;
+	}
+
+	&__player {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		max-width: 30rem;
+		width: 100%;
+	}
+
+	&__score {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		background: rgba($border-color, $alpha: 0.2);
+		height: 25rem;
+
+		&--point {
+			padding: 1rem 0 0 0;
+		}
+	}
+
+	&__current {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		background: $border-color;
+		height: 15rem;
+		margin-top: 2rem;
+		background: rgba($border-color, $alpha: 0.2);
 	}
 }
