--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -4,5 +4,6 @@ $primary-yellow: #fffe43;
 $primary-blue: #465b7b;
 $primary-black: #2b2a2b;
 $primary-grey: #bdbcbd;
+$primary-red: #d6373f;
 $opacity-color: #3b4c6b;
 $border-color: #959db6;
