--- a/src/styles/layout/_piggame.scss
+++ b/src/styles/layout/_piggame.scss
@@ -1,7 +1,7 @@
 .piggame {
 	display: flex;
-	height: 100vh;
 	width: 100%;
+	height: 100vh;
 	background-image: url("images/background.jpg");
 	padding: 0 5rem;
 
@@ -14,6 +14,7 @@
 		display: flex;
 		height: 15rem;
 		align-items: flex-start;
+		justify-content: space-between;
 		padding: 2rem 0 0 0;
 	}
 
@@ -60,7 +61,7 @@
 		&--limit {
 			display: flex;
 			height: 100%;
-			margin: 0 0 0 5rem;
+			// margin: 0 0 0 5rem;
 		}
 		&--firstnumber,
 		&--secondnumber {
@@ -77,12 +78,22 @@
 		}
 	}
 
+	&__value {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		height: 8rem;
+		max-width: 20rem;
+		width: 100%;
+		// margin: 0 0 0 15%;
+	}
+
 	&__body {
 		display: flex;
 		justify-content: space-between;
-		border-top: 1px solid $border-color;
-		border-bottom: 1px solid $border-color;
 		height: 75%;
+
+		@include border;
 	}
 
 	&__player {
