--- a/src/styles/layout/_setupgame.scss
+++ b/src/styles/layout/_setupgame.scss
@@ -1,4 +1,5 @@
 .piggame {
+	position: relative;
 	padding: 5rem;
 
 	&__setupGame {
@@ -203,11 +204,11 @@
 				}
 
 				&:nth-child(2) {
-					padding-left: 6rem;
+					padding-left: 7.5rem;
 				}
 
 				&:nth-child(3) {
-					padding: 0 1rem 0 0;
+					padding: 0 2rem 0 0;
 				}
 			}
 		}
