--- a/src/styles/base/_util.scss
+++ b/src/styles/base/_util.scss
@@ -33,3 +33,44 @@
 		}
 	}
 }
+
+.animate {
+	@-webkit-keyframes pulse {
+		from {
+			-webkit-transform: scale3d(1, 1, 1);
+			transform: scale3d(1, 1, 1);
+		}
+
+		50% {
+			-webkit-transform: scale3d(1.05, 1.05, 1.05);
+			transform: scale3d(1.5, 1.5, 1.5);
+		}
+
+		to {
+			-webkit-transform: scale3d(1, 1, 1);
+			transform: scale3d(1, 1, 1);
+		}
+	}
+
+	@keyframes pulse {
+		from {
+			-webkit-transform: scale3d(1, 1, 1);
+			transform: scale3d(1, 1, 1);
+		}
+
+		50% {
+			-webkit-transform: scale3d(1.05, 1.05, 1.05);
+			transform: scale3d(1.5, 1.5, 1.5);
+		}
+
+		to {
+			-webkit-transform: scale3d(1, 1, 1);
+			transform: scale3d(1, 1, 1);
+		}
+	}
+
+	-webkit-animation-name: pulse;
+	animation-name: pulse;
+	animation-iteration-count: infinite;
+	animation-duration: 2s;
+}
