--- a/src/styles/layout/_piggame.scss
+++ b/src/styles/layout/_piggame.scss
@@ -27,7 +27,8 @@
 			background: $primary-green;
 			border: none;
 			height: 8rem;
-			padding: 0 8rem;
+			// padding: 0 8rem;
+			width: 28rem;
 			cursor: pointer;
 			transition: all .7s;
 
@@ -41,7 +42,8 @@
 		&--hold {
 			background: $primary-blue;
 			border: none;
-			padding: 0rem 2rem;
+			// padding: 0rem 2rem;
+			width: 10rem;
 			cursor: pointer;
 			transition: all .7s;
 
