--- a/src/styles/layout/_piggame.scss
+++ b/src/styles/layout/_piggame.scss
@@ -4,6 +4,7 @@
 	height: 100vh;
 	background-image: url("images/background.jpg");
 	padding: 0 5rem;
+	// position: relative;
 
 	&__container {
 		width: 100%;
