--- a/src/styles/base/_util.scss
+++ b/src/styles/base/_util.scss
@@ -34,6 +34,26 @@
 	}
 }
 
+.gameFinish {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	position: absolute;
+	width: 100%;
+	height: 100vh;
+	background: black;
+	color: white;
+
+	font-size: 10rem;
+	font-weight: bold;
+	font-family: $font-1;
+}
+
 .animate {
 	@-webkit-keyframes pulse {
 		from {
